# task_1

./: .gitignore  activate_poetry_env.sh  alembic.ini  config.py  db_util.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 37046a98b66f_db_v1_0_first_working_version.py
dao/: base.py  user_dao.py
database/: db_util.py
models/: metaclass.py  models.py
pages/: update_user.html
routers/: api_router.py  pet_router.py  user_profile_router.py  user_router.py
schemas/: user.py
services/: user_profile_service.py  user_service.py
