[tool.poetry]
name = "task-1-venv"
version = "0.1.0"
description = "Poetry test."
authors = ["filipvujic <filip.vujic@qcerris.com>"]
readme = "README.md"
packages = [{include = "task_1_venv"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
